feature finder - enabled use of threads vs gpus

--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -9,7 +9,7 @@ cuda_root = os.environ.get('CUDA_ROOT', '/usr/local/cuda')
 
 ccflags = ['-Wall', '-Wextra', '-Werror']
 ccflags.extend(['-Wno-unused-function', '-Wno-unused-parameter', '-Wno-unused-variable'])
-ccflags.extend(['-std=c++11']) #, '-fopenmp'])
+ccflags.extend(['-std=c++11', '-fopenmp'])
 cpath = ['/usr/local/include']
 libpath = []
 libs = ['opencv_core', 'opencv_gpu', 'opencv_stitching', 'gomp']
@@ -18,9 +18,6 @@ if ARGUMENTS.get('debug', 0):
     ccflags.extend(['-ggdb', '-O0'])
 else:
     ccflags.append('-O3')
-
-if cxx == 'clang++':
-    ccflags.append('-fcolor-diagnostics')
 
 env = Environment(CC = cc, CXX = cxx)
 env.Append(CCFLAGS = ccflags)
