--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -2,8 +2,14 @@
 
 import os
 
-cc = os.environ.get('CC', 'gcc-4.7')
-cxx = os.environ.get('CXX', 'g++-4.7')
+cc = 'gcc-4.7'
+cxx = 'g++-4.7'
+if ARGUMENTS.get('debug', 0):
+    cc = 'clang'
+    cxx = 'clang++'
+
+cc = os.environ.get('CC', cc)
+cxx = os.environ.get('CXX', cxx)
 
 cuda_root = os.environ.get('CUDA_ROOT', '/usr/local/cuda')
 
@@ -13,12 +19,6 @@ ccflags.append('-Wno-unused-parameter')
 ccflags.append('-Wno-unused-variable')
 ccflags.append('-std=c++11')
 
-cpath = ['/usr/local/include']
-
-libpath = []
-
-libs = ['opencv_core', 'opencv_gpu', 'opencv_stitching', 'gomp']
-
 if ARGUMENTS.get('debug', 0):
     ccflags.extend(['-ggdb', '-O0'])
 else:
@@ -26,6 +26,13 @@ else:
 
 if ARGUMENTS.get('omp', 0):
     ccflags.append('-fopenmp')
+
+cpath = ['/usr/local/include']
+
+libpath = []
+
+libs = ['opencv_core', 'opencv_gpu', 'opencv_stitching', 'gomp']
+
 
 env = Environment(CC = cc, CXX = cxx)
 env.Append(CCFLAGS = ccflags)
