--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -4,12 +4,13 @@ import os
 
 cc = 'gcc-4.7'
 cxx = 'g++-4.7'
-if ARGUMENTS.get('debug', 0):
-    cc = 'clang'
-    cxx = 'clang++'
 
+# cmd args > env values
 cc = os.environ.get('CC', cc)
 cxx = os.environ.get('CXX', cxx)
+if ARGUMENTS.get('clang', 0):
+    cc = 'clang'
+    cxx = 'clang++'
 
 cuda_root = os.environ.get('CUDA_ROOT', '/usr/local/cuda')
 
