opencv - dicer patch 1
creates one subimage

--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -47,3 +47,5 @@ sources.extend(['memcached.cpp'])
 
 env.Program('stitcher', ['main.cpp', sources])
 
+env.Program('dicer', ['dicer-app.cpp', 'io.cpp'])
+
