--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -47,5 +47,5 @@ sources.extend(['memcached.cpp'])
 
 env.Program('stitcher', ['main.cpp', sources])
 
-env.Program('dicer', ['dicer-app.cpp', 'io.cpp'])
+env.Program('dicer', ['dicer-app.cpp', sources])
 
