integrated memcached with c++ spout
nodes assumed to be contiguous in number, positive integers
graph entries stored as JSON tuples

e.g.
    get 10
    VALUE 10 0 47
    [ "40012", "5727", "45394", "74246", "18283" ]

and assumes a 'graph_info' entry exists describing the graph:
    get graph_info
    VALUE graph_info 0 17
    {"max":"105937"}

--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -82,6 +82,6 @@ env.Append(CCFLAGS = ccflags)
 env.Append(CPPPATH = cpath)
 env.Append(CPPPATH = ['/usr/include/jsoncpp/'])
 env.Append(LIBPATH = libpath)
-env.Append(LIBS = ['jsoncpp'])
+env.Append(LIBS = ['jsoncpp', 'memcached'])
 env.Program('stormstitcher', storm_files)
 
