--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -1,4 +1,5 @@
 #! /usr/bin/env python
+# scons clang=1 ocl=1 -jN [-debug=1]
 
 import os
 
@@ -19,6 +20,10 @@ ccflags.append('-Wno-unused-parameter')
 
 libs = []
 
+if ARGUMENTS.get('ocl', 0):
+    libs.append('amdocl64')
+    libs.append('ncurses') # this is a dependency apparently
+
 if ARGUMENTS.get('debug', 0):
     ccflags.extend(['-ggdb', '-O0'])
 else:
@@ -32,6 +37,7 @@ if cc == 'clang' or cxx == 'clang++':
     ccflags.append('-fcolor-diagnostics')
 
 cpath = ['/usr/local/include', '../include']
+cpath.append('/usr/include/jsoncpp')
 
 libpath = []
 
@@ -39,27 +45,25 @@ if ARGUMENTS.get('ocl', 0):
     libs.append('amdocl64')
 
 # libs acquired from 'pkg-config --libs opencv'
-libs.extend(['opencv_calib3d',
-        'opencv_contrib',
-        'opencv_core',
-        'opencv_features2d',
-        'opencv_flann',
-        'opencv_gpu',
-        'opencv_highgui',
-        'opencv_imgproc',
-        'opencv_legacy',
-        'opencv_ml',
-        'opencv_nonfree',
-        'opencv_objdetect',
-        'opencv_ocl',
-        'opencv_photo',
-        'opencv_stitching',
-        'opencv_superres',
-        'opencv_ts',
-        'opencv_video',
-        'opencv_videostab'])
-libs.extend(['tbb', 'rt', 'pthread', 'm', 'dl'])
-libs.append('uuid')
+libs.extend(['-lopencv_calib3d',
+    '-lopencv_contrib',
+    '-lopencv_core',
+    '-lopencv_features2d',
+    '-lopencv_flann',
+    '-lopencv_gpu',
+    '-lopencv_highgui',
+    '-lopencv_imgproc',
+    '-lopencv_legacy',
+    '-lopencv_ml',
+    '-lopencv_objdetect',
+    '-lopencv_ocl',
+    '-lopencv_photo',
+    '-lopencv_stitching',
+    '-lopencv_superres',
+    '-lopencv_ts',
+    '-lopencv_video',
+    '-lopencv_videostab'])
+libs.extend(['jsoncpp', 'memcached'])
 
 env = Environment(CC = cc, CXX = cxx)
 env.Append(CCFLAGS = ccflags)
@@ -67,21 +71,15 @@ env.Append(CPPPATH = cpath)
 env.Append(LIBPATH = libpath)
 env.Append(LIBS = libs)
 
-sources = ['io.cpp', 'stitcher.cpp', 'matchers.cpp', 'motion_estimators.cpp']
-sources.extend(['memcached.cpp'])
+sources = ['stitcher.cpp', 'matchers.cpp', 'motion_estimators.cpp']
+sources.extend(['StormStitcher.cpp', 'StormWrapper.cpp'])
+env.Program('stormstitcher', sources)
+
+#sources = ['io.cpp', 'stitcher.cpp', 'matchers.cpp', 'motion_estimators.cpp']
+#sources.extend(['memcached.cpp'])
 
 #env.Program('stitcher', ['main.cpp', sources])
 
 #env.Program('dicer', ['dicer-app.cpp', sources])
 #env.Program('sizes', ['show-sizes.cpp', sources])
-
-# Separate environment for the storm proxy code.
-storm_files = ['StormStitcher.cpp', 'StormWrapper.cpp']
-env = Environment(CC = cc, CXX = cxx)
-env.Append(CCFLAGS = ccflags)
-env.Append(CPPPATH = cpath)
-env.Append(CPPPATH = ['/usr/include/jsoncpp/'])
-env.Append(LIBPATH = libpath)
-env.Append(LIBS = ['jsoncpp', 'memcached'])
-env.Program('stormstitcher', storm_files)
 
