--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -13,7 +13,7 @@ if ARGUMENTS.get('clang', 0):
     cc = 'clang'
     cxx = 'clang++'
 
-ccflags = ['-std=c++11']
+ccflags = ['-std=c++1y']
 ccflags.extend(['-Wall', '-Wextra', '-Werror'])
 ccflags.append('-Wno-unused-function')
 ccflags.append('-Wno-unused-parameter')
