use of protobuf to save snapshots of inputs
inputs are read and saved to binary files
you can then load these in and inject to object store without reparsing

--- a/src/opencv/SConstruct
+++ b/src/opencv/SConstruct
@@ -14,7 +14,8 @@ if ARGUMENTS.get('clang', 0):
     cxx = 'clang++'
 
 ccflags = ['-std=c++1y']
-ccflags.extend(['-Wall', '-Wextra', '-Werror'])
+#ccflags.extend(['-Wall', '-Wextra', '-Werror'])
+ccflags.extend(['-Wall', '-Wextra'])
 ccflags.append('-Wno-unused-function')
 ccflags.append('-Wno-unused-parameter')
 
