--- a/src/opencv/pulse.conf
+++ b/src/opencv/pulse.conf
@@ -1,5 +1,5 @@
 memc serv --SERVER=10.0.0.1:11211 --SERVER=10.0.0.2:11211
-graph idsfile graph-ids.txt
+graph idsfile inputs/graph-ids.txt
 spout usleep 200
 spout maxdepth 12
 storm spout 2
