--- a/src/opencv/pulse.conf
+++ b/src/opencv/pulse.conf
@@ -1,4 +1,4 @@
-memc serv --SERVER=10.0.0.1:11211 --SERVER=10.0.0.2:11211
+memc serv --SERVER=10.0.0.1:11211 --SERVER=10.0.0.2:11211 --SERVER=10.0.0.3:11211 --SERVER=10.0.0.4:11211 --SERVER=10.0.0.5:11211 --SERVER=10.0.0.6:11211 --SERVER=10.0.0.7:11211
 graph idsfile graph-ids.txt
 spout usleep 200
 spout maxdepth 12
