analyze: sift feature detection

--- a/src/analytics/makefile
+++ b/src/analytics/makefile
@@ -19,7 +19,7 @@ else
 	CXXFLAGS += -ggdb -O0
 endif
 
-TARGETS := analyze decode
+TARGETS := cv/libcv.a analyze decode
 OTHERDEPS := makefile
 
 .PHONY:	all
@@ -28,33 +28,47 @@ all:	$(TARGETS)
 #analyze:	analyze.o $(OTHERDEPS)
 #$(CXX) -o $@ $< \
 
-analyze:	analyze.o $(OTHERDEPS)
-	$(CXX) -o $@ $< \
+analyze:	analyze.o cv/libcv.a $(OTHERDEPS)
+	$(CXX) -o $@ $< cv/libcv.a \
 		$(LDFLAGS) $(LIBS) $(GMCCLIBS) -ldl \
 		-lgdk-x11-2.0 $(OCVLIBS) ./thirdparty/opensift/lib/libopensift.a
 
-analyze_je:	analyze.o $(OTHERDEPS)
-	$(CXX) -o $@ $< \
+analyze_je:	analyze.o cv/libcv.a $(OTHERDEPS)
+	$(CXX) -o $@ $< cv/libcv.a \
 		$(LDFLAGS) $(LIBS) $(GMCCLIBS) -ldl \
 		-lgdk-x11-2.0 $(OCVLIBS) ./thirdparty/opensift/lib/libopensift.a \
 		-ljemalloc
 
-analyze_tc:	analyze.o $(OTHERDEPS)
-	$(CXX) -o $@ $< \
+analyze_tc:	analyze.o cv/libcv.a $(OTHERDEPS)
+	$(CXX) -o $@ $< cv/libcv.a \
 		$(LDFLAGS) $(LIBS) $(GMCCLIBS) -ldl \
 		-lgdk-x11-2.0 $(OCVLIBS) ./thirdparty/opensift/lib/libopensift.a \
 		-ltcmalloc
 
-malloc-track.o: malloc-track.c $(OTHERDEPS)
-	$(CC) -o $@ $< $(CFLAGS) -c -fPIC
+#malloc-track.o: malloc-track.c $(OTHERDEPS)
+#$(CC) -o $@ $< $(CFLAGS) -c -fPIC
 
-libmalloctrack.so: malloc-track.o $(OTHERDEPS)
-	$(CC) -o $@ $< $(LDFLAGS) -shared
+#libmalloctrack.so: malloc-track.o $(OTHERDEPS)
+#$(CC) -o $@ $< $(LDFLAGS) -shared
 
 decode:	decode.o $(OTHERDEPS)
 	$(CXX) -o $@ $< $(LDFLAGS) $(LIBS)
 
+#
+# OpenCV (internal) sources used to decode images from in-memory buffers.
+#
+CV_SOURCES = $(wildcard cv/*.cpp)
+CV_OBJ = $(patsubst %.cpp,%.o,$(CV_SOURCES))
+
+CV_COMMON = cv/decoders.h cv/precomp.hpp
+
+cv/%.o:	cv/%.cpp cv/%.hpp $(CV_COMMON)
+		$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+cv/libcv.a:	$(CV_OBJ)
+		ar rcus $@ $^
+
 .PHONY: clean
 clean:
-	rm -f $(TARGETS) *.o *.so
+	rm -f $(TARGETS) cv/*.o *.o *.so
 
